elastic/route-elastic.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: elasticsearch
  namespace: elastic
  labels:
    common.k8s.elastic.co/type: elasticsearch
    elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
spec:
  host: elasticsearch
  to:
    kind: Service
    name: elastic-es-http
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
